# InternetShop

./: README.md  data.json  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_is_published.py  0002_post_owner.py  0003_alter_post_view_count.py  0004_rename_view_count_post_views_count.py
blog/templates/blog/: post_confirm_delete.html  post_detail.html  post_edit_list.html  post_form.html  post_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: load_data.py
catalog/migrations/: 0001_initial.py  0002_alter_product_image.py  0002_product_author.py  0002_rename_description_category_category_description.py  0003_alter_contacts_options_contacts_phone.py  0003_product.py  0003_remove_product_author_product_created_by_user.py  0004_category_created_at.py  0004_message.py  0004_rename_created_by_user_product_producer.py  0005_rename_contacts_contact.py  0005_rename_producer_product_owner.py  0006_product_views_count.py  0007_productversion.py
catalog/templates/catalog/: 1contacts.html  add_product.html  base.html  category_list.html  contact_view.html  (+7 more)
catalog/templatetags/: catalog_tags.py
config/: settings.py  urls.py
fixtures/: blog.json  catalog.json  message_box.json  users.json
users/: forms.py  models.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_user_key_alter_user_is_active.py  0003_alter_user_country_alter_user_first_name_and_more.py  0004_alter_user_country.py
utils/: file_manager.py
(+12 files in other folders)
