[tool.poetry]
name = "internetshop"
version = "0.1.0"
description = ""
authors = ["u_alex90 <u_alex90@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
oyaml = "^1.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.8"
pillow = "^10.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
